Fix : Ajoute la table book_author
