# app/Http/Controllers/IsbnCodeController.php
@@ -5,6 +5,10 @@ namespace App\Http\Controllers;
 use App\Models\IsbnCode;
 use App\Http\Resources\IsbnCodeResource;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Http;
+use App\Http\Resources\BookResource;
+use App\Models\Book;
+use GuzzleHttp\Promise\Is;
 
 /**
  * @OA\Tag(name="Isbn Code")
@@ -166,5 +170,90 @@ class IsbnCodeController extends Controller
         $isbnCode->delete();
 
         return response()->json(['message' => 'ISBN code deleted successfully']);
+    }
+
+   /**
+     * @OA\Get(
+     *     path="/api/isbn_codes/search/{isbn_code}",
+     *     tags={"Isbn Code"},
+     *     summary="Search a book with an ISBN code",
+     *     @OA\Parameter(
+     *         name="isbn_code",
+     *         in="path",
+     *         description="ISBN Code",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Book found",
+     *         @OA\MediaType(mediaType="application/json")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Book not found"
+     *     )
+     * )
+     */
+    public function search(string $isbnCode)
+    {
+
+        $isbnCodeTest = IsbnCode::where('code', $isbnCode)->first();
+
+        if ($isbnCodeTest) {
+            return new BookResource($isbnCodeTest->book);
+        }
+
+
+        $url = 'https://www.googleapis.com/books/v1/volumes?q=isbn:'. $isbnCode;
+
+        $response = Http::withOptions(['verify' => false])->get($url);
+
+        $json = $response->json();
+
+        // récupération des données
+        $title = $json['items'][0]['volumeInfo']['title'];
+        $authors = $json['items'][0]['volumeInfo']['authors'];
+        // pour chaque auteur, on vérifie s'il existe en base de données
+        // foreach ($authors as $author) {
+        //     // division de la chaîne de caractères en tableau
+        //     $author = explode(' ', $author);
+
+        //     $authorFirstNameTest = Author::where('firstname', $author[0])->first();
+        //     $authorLastNameTest = Author::where('lastname', $author[1])->first();
+        //     // si l'auteur n'existe pas, on le crée
+        //     if (!$authorFirstNameTest && !$authorLastNameTest) {
+        //         $authorTest = Author::create(['name' => $author]);
+        //     }
+        //     // on récupère l'id de l'auteur
+        //     $authorId = $authorTest->id;
+        //     // on crée une entrée dans la table pivot
+        //     $authorBook = AuthorBook::create(['author_id' => $authorId]);
+        // }
+        $publishedDate = $json['items'][0]['volumeInfo']['publishedDate'];
+        $validated = false;
+        $publisher = $json['items'][0]['volumeInfo']['publisher'];
+
+        // on crée le livre
+        $book = Book::create([
+            'title' => $title,
+            'validated' => $validated,
+            'author_id' => 1,
+            'parution_date' => $publishedDate,
+            'validated' => $validated,
+            'editor_id' => 1,
+        ]);
+
+        // on crée le code ISBN
+        $isbnCode = IsbnCode::create([
+            'code' => $isbnCode,
+            'validated' => $validated,
+            'book_id' => $book->id,
+        ]);
+
+        $book->isbn_code_id = $isbnCode->id;
+        $book->save();
+
+        return new BookResource($book);       
     }
 }
